--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
       </div>
     </header>
     <main>
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
       <section class="values section">
         <div class="container">
           <h2 class="chapter-title visually-hidden">Our values</h2>
@@ -190,13 +190,16 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="activity section">
+      <section class="activity section">
         <div class="container">
           <h2 class="chapter-title activity-chapter">What are we doing</h2>
           <ul class="activity-list list">
             <li class="activity-item">
               <img
-                src="./images/main-page-images/img-1.jpg"
+                srcset="
+                  ./images/main-page-images/activity-images/img-monitor@2x.jpg 2x
+                "
+                src="./images/main-page-images/activity-images/img-monitor.jpg"
                 alt="a white monitor"
                 width="360"
                 height="300"
@@ -204,7 +207,10 @@
             </li>
             <li class="activity-item">
               <img
-                src="./images/main-page-images/img-2.jpg"
+                srcset="
+                  ./images/main-page-images/activity-images/img-phone-screens@2x.jpg 2x
+                "
+                src="./images/main-page-images/activity-images/img-phone-screens.jpg"
                 alt="a mobile phone"
                 width="360"
                 height="300"
@@ -212,7 +218,10 @@
             </li>
             <li class="activity-item">
               <img
-                src="./images/main-page-images/img-3.jpg"
+                srcset="
+                  ./images/main-page-images/activity-images/img-phone-laptop@2x.jpg 2x
+                "
+                src="./images/main-page-images/activity-images/img-phone-laptop.jpg"
                 alt="a mobile phone and a laptop"
                 width="360"
                 height="300"
@@ -220,21 +229,24 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="team section">
-        <div class="container">
+      </section>
+      <section class="team section">
+        <div class="team-container">
           <h2 class="chapter-title team-chapter">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
               <img
-                src="./images/main-page-images/person-1.jpg"
+                srcset="
+                  ./images/main-page-images/team-images/team-img-mark@2x.jpg 2x
+                "
+                src="./images/main-page-images/team-images/team-img-mark.jpg"
                 alt="photo of Mark Guerrero"
                 width="264"
                 height="260"
               />
               <div class="box-team">
-                <h3 class="chapter-subtitle team-subtitle">Mark Guerrero</h3>
-                <p class="chapter-text">Product Designer</p>
+                <h3 class="team-subtitle">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
                 <ul class="team-soc-list list">
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
@@ -269,14 +281,17 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/main-page-images/person-2.jpg"
+                srcset="
+                  ./images/main-page-images/team-images/team-img-tom@2x.jpg 2x
+                "
+                src="./images/main-page-images/team-images/team-img-tom.jpg"
                 alt="photo of Tom Ford"
                 width="264"
                 height="260"
               />
               <div class="box-team">
-                <h3 class="chapter-subtitle team-subtitle">Tom Ford</h3>
-                <p class="chapter-text">Frontend Developer</p>
+                <h3 class="team-subtitle">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
                 <ul class="team-soc-list list">
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
@@ -311,14 +326,17 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/main-page-images/person-3.jpg"
+                srcset="
+                  ./images/main-page-images/team-images/team-img-camila@2x.jpg 2x
+                "
+                src="./images/main-page-images/team-images/team-img-camila.jpg"
                 alt="photo of Camila Garcia"
                 width="264"
                 height="260"
               />
               <div class="box-team">
-                <h3 class="chapter-subtitle team-subtitle">Camila Garcia</h3>
-                <p class="chapter-text">Marketing</p>
+                <h3 class="team-subtitle">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
                 <ul class="team-soc-list list">
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
@@ -356,14 +374,17 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/main-page-images/person-4.jpg"
+                srcset="
+                  ./images/main-page-images/team-images/team-img-daniel@2x.jpg 2x
+                "
+                src="./images/main-page-images/team-images/team-img-daniel.jpg"
                 alt="photo of Daniel Wilson"
                 width="264"
                 height="260"
               />
               <div class="box-team">
-                <h3 class="chapter-subtitle team-subtitle">Daniel Wilson</h3>
-                <p class="chapter-text">UI Designer</p>
+                <h3 class="team-subtitle">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
                 <ul class="team-soc-list list">
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
@@ -398,42 +419,42 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="customers section">
-        <div class="container">
+      </section>
+      <section class="customers section">
+        <div class="customers-container">
           <h2 class="chapter-title customers-chapter">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-item">
               <a href="" class="customers-link">
-                <svg class="customers-icon" width="104" height="56">
+                <svg class="customers-icon">
                   <use href="./images/icons.svg#icon-Logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
-                <svg class="customers-icon" width="104" height="56">
+                <svg class="customers-icon">
                   <use href="./images/icons.svg#icon-Logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
-                <svg class="customers-icon" width="104" height="56">
+                <svg class="customers-icon">
                   <use href="./images/icons.svg#icon-Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
-                <svg class="customers-icon" width="104" height="56">
+                <svg class="customers-icon">
                   <use href="./images/icons.svg#icon-Logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
-                <svg class="customers-icon" width="104" height="56">
+                <svg class="customers-icon">
                   <use href="./images/icons.svg#icon-Logo-5"></use>
                 </svg>
               </a>
@@ -447,14 +468,13 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
-    <!-- <footer class="page-end">
-      <div class="container footer-thumb">
+    <footer class="page-end">
+      <div class="footer-thumb">
         <div class="footer-box-logo-text">
-          <a class="logotype link" href="./index.html">
-            Web
-            <span class="logotype-studio-down">Studio</span>
+          <a class="logotype link" href="./index.html"
+            >Web<span class="logotype-studio-down">Studio</span>
           </a>
           <p class="page-end-text">
             Increase the flow of customers and sales for your business with
@@ -515,8 +535,8 @@
           </form>
         </div>
       </div>
-    </footer> -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    </footer>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-btn-icon" width="8" height="8">
@@ -594,8 +614,8 @@
           <button type="submit" class="modal-form-submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
     <script src="./js/mobile-menu.js"></script>
-    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
