--- a/index.html
+++ b/index.html
@@ -608,8 +608,12 @@
             class="modal-form-checkbox visually-hidden"
           />
           <label for="user-policy" class="modal-form-check-desc">
-            I accept the terms and conditions of the&nbsp;
-            <a href="" class="modal-form-checkbox-link">Privacy Policy</a>
+            <span
+              >I accept the terms and conditions of the&nbsp;
+              <a href="" class="modal-form-checkbox-link"
+                >Privacy Policy</a
+              ></span
+            >
           </label>
           <button type="submit" class="modal-form-submit">Send</button>
         </form>
